--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,23 @@ header {
     text-decoration-color: white;
 
 }
+#sub-title{
+    background-color: rgb(236, 221, 250);
+    padding: 1rem;
+    margin: 0, 0, 0, 0;
+}
+.subheading {
+    background-color: white;
+    padding: 1rem;
+}
+
+body {
+    background-color: #73c9da;
+}
+
+#first-article {
+    background: linear-gradient(0DEG, rgba(255,255,255,1) 0%, rgba(9,9,121,0) 35%, rgba(115,201,218,0.8) 100%);
+}
 
 
 /* link styles */
