--- a/styles.css
+++ b/styles.css
@@ -11,16 +11,22 @@ header {
     background-image: url("https://images.unsplash.com/photo-1470125634816-ede3f51bbb42?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8c3Vuc2V0JTIwcGFub3JhbWF8ZW58MHx8MHx8&w=1000&q=80");
     background-size: cover;
     text-decoration-color: white;
-
+    border-radius: 10px;
+    padding: 1em;
+    box-shadow: 10px 5px 7px gray;
+    text-shadow: 1px 1px 10px black;
 }
+
 #sub-title{
     background-color: rgb(236, 221, 250);
     padding: 1rem;
     margin: 0, 0, 0, 0;
 }
+
 .subheading {
     background-color: white;
-    padding: 1rem;
+    /* padding: 1rem; */
+    border-bottom: solid black;
 }
 
 body {
@@ -28,7 +34,9 @@ body {
 }
 
 #first-article, #second-article {
-    background: linear-gradient(0DEG, rgba(255,255,255,1) 0%, rgba(9,9,121,0) 35%, rgba(115,201,218,0.8) 100%);
+    background: linear-gradient(0DEG, rgba(255,255,255,1) 0%, rgba(9,9,121,0) 35%, rgba(12, 90, 173, 0.8) 100%);
+    padding: 1em;
+    box-shadow: 10px 5px 7px gray;
 }
 
 
@@ -41,4 +49,18 @@ a {
 
 a:hover {
     color: red;
+}
+
+#tower {
+    display: block;
+}
+
+img {
+    display: block;
+    height: 20%;
+    border: 4px solid white;
+    margin: 2rem;
+    border-radius: 15px;
+    margin-bottom: 1em;
+    box-shadow: 10px 5px 7px gray;
 }
